--- a/ursine-umbra.scss
+++ b/ursine-umbra.scss
@@ -1,6 +1,9 @@
 
 // SCSS VARIABLES //
 
+// Umbra or Polar?
+$umbra: true !default;
+
 // Font variables
 $paragraph-font: "'Avenir Next LT Pro', 'Lato', sans-serif";
 $header-font: "'Adelle', 'Times New Roman', serif";
